fix: non-markdown files: Top position content has extra spacing

--- a/src/Styles/body.css
+++ b/src/Styles/body.css
@@ -104,18 +104,21 @@ body {
     --ntb-tbar-bottom-mb-phone: var(--cg-nt-tbar-bottom-mb-phone);
     --ntb-tbar-top-fade-mask: linear-gradient(to bottom, rgba(0, 0, 0, var(--view-top-fade-opacity)) 0%, #000000 calc(var(--view-header-height) + 12px));;
     --ntb-tbar-top-header-mt-phone: 0px;
-    --ntb-tbar-top-md-spacing: var(--size-4-2);
+    --ntb-tbar-top-spacing-md: var(--size-4-2);
+    --ntb-tbar-top-spacing: var(--size-4-2);
     --ntb-tbar-top-mt-phone: var(--safe-area-inset-top);
     --ntb-tbar-top-pt-phone: 0px;
     &.auto-full-screen {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--navbar-height));
         --ntb-tbar-top-header-mt-phone: calc(var(--ntb-toolbar-height));
         --ntb-tbar-top-header-pt-phone: var(--view-header-top-offset);
-        --ntb-tbar-top-md-spacing: calc(var(--view-header-height) + 16px);
+        --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
+        --ntb-tbar-top-spacing: calc(var(--view-header-height) + 16px);
     }
     &.is-floating-nav {
         --ntb-tbar-bottom-mb-phone: calc(var(--cg-nt-tbar-bottom-mb-phone) + var(--navbar-height) + var(--safe-area-inset-bottom));
-        --ntb-tbar-top-md-spacing: calc(var(--view-header-height) + 16px);
+        --ntb-tbar-top-spacing-md: calc(var(--view-header-height) + 16px);
+        --ntb-tbar-top-spacing: calc(var(--view-header-height) + 16px);
         &:not(.auto-full-screen) {
             --ntb-tbar-top-header-mt-phone: calc(var(--ntb-toolbar-height));
             --ntb-tbar-top-header-pt-phone: var(--view-header-top-offset);
