--- a/src/Styles/callout.css
+++ b/src/Styles/callout.css
@@ -66,7 +66,8 @@
 /* removes safe area inset from these variables, as it's taken into account above the toolbar */
 .is-phone:has(.cg-note-toolbar-container[data-tbar-position="top"]) .view-content {
     --view-top-fade-mask: var(--ntb-tbar-top-fade-mask);
-    --view-top-spacing-markdown: var(--ntb-tbar-top-md-spacing);
+    --view-top-spacing: var(--ntb-tbar-top-spacing);
+    --view-top-spacing-markdown: var(--ntb-tbar-top-spacing-md);
 }
 
 .callout[data-callout="note-toolbar-output"] {
